[project]
name = "solution-adjuster-streamlit"
version = "0.1.0"
description = "Streamlit app for solution concentration adjustment"
readme = "README.md"
authors = [
    { name = "youthesame", email = "yu2000h@gmail.com" }
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "streamlit>=1.52.0",
]

[project.scripts]
solution-adjuster-streamlit = "solution_adjuster_streamlit:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]
