[project]
name = "solution-adjuster-streamlit"
version = "0.1.0"
description = "Streamlit app for solution concentration adjustment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["plotly>=6.0.0", "streamlit>=1.52.0"]

[project.scripts]
solution-adjuster-streamlit = "solution_adjuster_streamlit:main"

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.0"]
